@@ -1,7 +1,8 @@
 1.0 "Asieoniezi"
 
 0.128 "SR/CL: Leitmotiv: Toynbee Idea"
- 431247 Add A Scoring Rule crashes if no article is selected (Christophe)
+ 431247 "Add a Scoring Rule" crashes if no article is selected (Christophe)
+ 430958 Get N Headers fails if group has small # of headers (Anon)
  429449 Pan 0.126, 0.127 won't compile w/gtk 2.6.x (Jeff Berman)
  429485 Articles marked read showing back up (Frank Tabor)
  407301 All new articles are shown, regardless of score (Per Hedeland)
